# Wizard-Training-Game

./: CMakeLists.txt  README.md
src/: Collider.cpp  Collider.h  Fireball.cpp  Fireball.h  Player.cpp  Player.h  main.cpp
